# QMusicPlayer

./: .gitignore  CMakeLists.txt  README.md  appinit.cpp  appinit.h  centralwidget.cpp  centralwidget.h  centralwidget.ui  databasemanager.cpp  databasemanager.h  icon.rc  main.cpp  mainframe.cpp  mainframe.h  parsemusic.cpp  parsemusic.h  playlistsnavibutton.cpp  playlistsnavibutton.h  res.qrc
res/db/: data.db
res/stylesheets/: silvery.css
